@@ -42,7 +42,7 @@ samples/mfc/make_cw.mcp
 
 samples/minimal/make_cw.mcp
 
-samples/minimal/make_cw.mcp
+samples/minifram/make_cw.mcp
 
 samples/nativdlg/make_cw.mcp
 
